// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Website reducer Should set the initial state 1`] = `
Object {
  "url": "https://www.theeventscalendar.com/",
}
`;

exports[`[STORE] - Website reducer Should set the website value 1`] = `
Object {
  "url": "https://tri.be/",
}
`;
